--- a/test.html
+++ b/test.html
@@ -2,40 +2,17 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Hello, World!</title>
+<title>Hello World + QTS</title>
 <style>
-  body {
-    font-family: system-ui, sans-serif;
-    background-color: #121212;
-    color: #eee;
-    padding: 20px;
-  }
-
-  h1.title {
-    color: #fff;
-    margin-bottom: 20px;
-  }
-
-  /* QTS Grid Basis-Styling */
-  .qts-grid {
-    display: grid;
-    gap: 6px;
-    margin: 20px 0;
-  }
-
-  .qts-cell {
-    padding: 6px 10px;
-    border-radius: 6px;
-    background: #1e1e1e;
-    color: #eee;
-    font-family: system-ui, sans-serif;
-    text-align: center;
-  }
+body { font-family: system-ui, sans-serif; background:#121212; color:#eee; padding:20px; }
+h1 { color:#fff; }
+.qts-grid { display:grid; gap:6px; margin:20px 0; }
+.qts-cell { padding:6px 10px; border-radius:6px; background:#1e1e1e; color:#eee; text-align:center; }
 </style>
 </head>
 <body>
 
-<h1 class="title">Hello World!</h1>
+<h1>Hello World!</h1>
 
 <qts>
 grid h:2;w:3
@@ -49,19 +26,8 @@ coordinate h:2;w:3 { color:lime; }
 </qts-style>
 </qts>
 
-<!-- qts.js laden -->
-<script src="https://quick-table-script.vercel.app/qts.js"></script>
-
-<!-- Optional: Statusfarbe dynamisch setzen -->
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    document.querySelectorAll(".qts-cell").forEach(td => {
-      if (td.innerText.toLowerCase() === "online") {
-        td.style.color = "lime";
-      }
-    });
-  });
-</script>
+<!-- qts.js muss hier nach dem <qts>-Tag stehen -->
+<script src="qts.js"></script>
 
 </body>
 </html>
