--- a/test.html
+++ b/test.html
@@ -2,13 +2,8 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Hello World + QTS</title>
-<style>
-body { font-family: system-ui, sans-serif; background:#121212; color:#eee; padding:20px; }
-h1 { color:#fff; }
-.qts-grid { display:grid; gap:6px; margin:20px 0; }
-.qts-cell { padding:6px 10px; border-radius:6px; background:#1e1e1e; color:#eee; text-align:center; }
-</style>
+<title>QTS Test</title>
+<script src="qts.js"></script>
 </head>
 <body>
 
@@ -16,18 +11,17 @@ h1 { color:#fff; }
 
 <qts>
 grid h:2;w:3
+
 <qts-content>
 [Name];[Alter];[Status];
 [Luković];[27];[Online];
 </qts-content>
+
 <qts-style>
 coordinate h:1;w:* { font-weight:bold; background:#111; color:white; }
 coordinate h:2;w:3 { color:lime; }
 </qts-style>
 </qts>
-
-<!-- qts.js muss hier nach dem <qts>-Tag stehen -->
-<script src="qts.js"></script>
 
 </body>
 </html>
