--- a/test.html
+++ b/test.html
@@ -2,8 +2,12 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>QTS Test</title>
-<script src="qts.js"></script>
+<title>QTS Demo</title>
+<style>
+  body { font-family: system-ui, sans-serif; background: #121212; color: #eee; padding: 20px; }
+  h1 { color: #fff; }
+  qts { display: block; white-space: pre; margin-bottom: 20px; }
+</style>
 </head>
 <body>
 
@@ -22,6 +26,8 @@ coordinate h:1;w:* { font-weight:bold; background:#111; color:white; }
 coordinate h:2;w:3 { color:lime; }
 </qts-style>
 </qts>
+
+<script src="qts.js"></script>
 
 </body>
 </html>
