--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Aeropus QTS Demo</title>
-<script src="https://quick-table-script.vercel.app/qts.js"></script>
+<script src="<script src="https://deine-vercel-seite/qts.js" defer></script>
 <style>
 body { font-family: system-ui, sans-serif; background: #121212; color: #eee; padding: 20px; }
 h1, h2 { color: #fff; }
